# linux-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  fork-watch.yml  release.yml
crates/linux-mcp/: Cargo.toml
crates/linux-mcp-core/: Cargo.toml
crates/linux-mcp-core/src/: audit.rs  lib.rs  path_policy.rs  process_policy.rs
crates/linux-mcp/src/: display.rs  error.rs  main.rs  schema.rs  server.rs  util.rs
crates/linux-mcp/src/tools/: clipboard.rs  dialog.rs  display_tools.rs  filesystem.rs  input.rs  mod.rs  notify.rs  process.rs  screenshot.rs
