[workspace]
resolver = "2"
members = [
    "crates/linux-mcp",
    "crates/linux-mcp-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Michael Adam Groberman"]
repository = "https://github.com/MichaelAdamGroberman/linux-mcp"
homepage = "https://github.com/MichaelAdamGroberman/linux-mcp"
readme = "README.md"

[workspace.dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "process", "fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
notify = "8"
fs_extra = "1.3"
async-trait = "0.1"
walkdir = "2"
glob = "0.3"
xattr = "1"
nix = { version = "0.31", features = ["signal", "user", "process"] }
url = "2"
which = "8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
